--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -7,7 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"/>
+        android:divider="#ff0000ff"
+        android:dividerHeight="1dp"
+        style="@style/Widget.AppCompat.ListView"
+        android:smoothScrollbar="true" />
 
 </FrameLayout>
