--- a/app/src/main/res/layout/home_screen_animeflv.xml
+++ b/app/src/main/res/layout/home_screen_animeflv.xml
@@ -1,39 +1,46 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.ouiaboo.ouiaboo.fragments.HomeScreen">
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/nombre_flv"
-        android:textSize="15dp"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/preview_flv"
-        android:gravity="center_horizontal"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/informacion_flv"
-        android:textSize="10dp"
-        android:paddingBottom="15dp"
-        android:gravity="center_horizontal"
-        android:layout_below="@+id/nombre_flv"
-        android:layout_toRightOf="@+id/preview_flv"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_centerVertical="true"
+    tools:context="com.ouiaboo.ouiaboo.fragments.HomeScreen">
 
     <ImageView
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/preview_flv"
-        android:layout_alignBottom="@+id/informacion_flv" />
+        android:id="@+id/preview_flv" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/preview_flv"
+        android:layout_toEndOf="@+id/preview_flv">
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/nombre_flv"
+            android:gravity="center"
+            android:textSize="18dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:layout_below="@id/nombre_flv"
+            android:id="@+id/informacion_flv"
+            android:gravity="center"
+            android:textSize="13dp" />
+
+    </RelativeLayout>
+
 
 
 </RelativeLayout>
