--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -31,12 +31,12 @@
         android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#111"
+        android:background="#669900"
         android:orientation="vertical">
 
         <ExpandableListView
             android:id="@+id/drawer_expandable_list"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
 
