--- a/app/src/main/res/menu/menu_central.xml
+++ b/app/src/main/res/menu/menu_central.xml
@@ -1,6 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context="com.ouiaboo.ouiaboo.Central">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/buscar"
+        android:icon="@drawable/ic_action_search"
+        android:title="@string/buscar.menu_central.ES"
+        android:orderInCategory="1"
+        app:showAsAction="ifRoom" />
 </menu>
