--- a/app/src/main/res/layout/drawer_list_uno.xml
+++ b/app/src/main/res/layout/drawer_list_uno.xml
@@ -1,25 +1,24 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#fff"
-        android:text="Item"
+        android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/icono"
-        android:layout_centerVertical="true" />
+        android:text="Item"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#fff" />
 
     <ImageView
+        android:id="@+id/icono"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/icono"
         android:layout_alignParentLeft="true"
-        android:layout_marginRight="16dp"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:layout_marginRight="16dp" />
 
 </RelativeLayout>
