--- a/app/src/main/res/layout/home_screen_animeflv.xml
+++ b/app/src/main/res/layout/home_screen_animeflv.xml
@@ -3,16 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerVertical="true"
-    tools:context="com.ouiaboo.ouiaboo.fragments.HomeScreen">
+    android:clickable="true"
+    android:background="?android:attr/selectableItemBackground"
+    android:focusable="true"
+    tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.HomeScreen">
 
     <ImageView
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/preview_flv" />
+        android:layout_width="128dp"
+        android:layout_height="77dp"
+        android:id="@+id/preview_flv"
+        android:background="@drawable/untitled" />
 
     <RelativeLayout
         android:layout_width="match_parent"
