--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,32 +6,38 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:entries="@array/paginas_anime"
-        android:layout_marginTop="45dp"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/activity_main.titulo_1.ES"
-        android:id="@+id/titulo1"
-        android:layout_marginTop="35dp"
-        android:textSize="27dp"
-        android:gravity="center_horizontal" />
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView"
+            android:entries="@array/paginas_anime"
+            android:layout_marginTop="45dp"
+            android:layout_below="@+id/textView"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/activity_main.subtitulo.ES"
-        android:id="@+id/textView"
-        android:layout_marginTop="30dp"
-        android:layout_below="@+id/titulo1"
-        android:gravity="center_horizontal"
-        android:textSize="15dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/activity_main.titulo_1.ES"
+            android:id="@+id/titulo1"
+            android:layout_marginTop="35dp"
+            android:textSize="27dp"
+            android:gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/activity_main.subtitulo.ES"
+            android:id="@+id/textView"
+            android:layout_marginTop="30dp"
+            android:layout_below="@+id/titulo1"
+            android:gravity="center_horizontal"
+            android:textSize="15dp"/>
+    </RelativeLayout>
+
 </RelativeLayout>
