--- a/app/src/main/res/menu/menu_central.xml
+++ b/app/src/main/res/menu/menu_central.xml
@@ -1,9 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context="com.ouiaboo.ouiaboo.Central">
-    <item android:id="@+id/buscar"
-        android:icon="@drawable/ic_action_search"
-        android:title="@string/buscar.menu_central.ES"
-        android:orderInCategory="1"
-        app:showAsAction="ifRoom" />
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.ouiaboo.ouiaboo.Central">
+
+
+    <item
+        android:id="@+id/buscar"
+        android:icon="@android:drawable/ic_menu_search"
+        app:showAsAction="always"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        android:title="Search"/>
 </menu>
