--- a/app/src/main/res/layout/busqueda_items_flv.xml
+++ b/app/src/main/res/layout/busqueda_items_flv.xml
@@ -13,8 +13,8 @@
         android:layout_marginRight="6dp"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="6dp"
-        android:layout_width="128dp"
-        android:layout_height="77dp"
+        android:layout_width="95dp"
+        android:layout_height="120dp"
         android:id="@+id/preview_flv"
         android:background="@drawable/untitled" />
 
@@ -22,9 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginRight="6dp"
         android:layout_toRightOf="@+id/preview_flv"
-        android:layout_toEndOf="@+id/preview_flv">
+        android:layout_toEndOf="@+id/preview_flv"
+        android:layout_marginRight="6dp">
 
 
         <TextView
