--- a/app/src/main/res/layout/fragment_episodios.xml
+++ b/app/src/main/res/layout/fragment_episodios.xml
@@ -1,25 +1,21 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.EpisodiosFlv">
 
-    <LinearLayout
+    <ExpandableListView
+        android:id="@+id/info_expandible"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.EpisodiosFlv">
-
-        <ExpandableListView
-            android:id="@+id/info_expandible"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />
 
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/episodios"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:choiceMode="singleChoice" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/episodios"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:choiceMode="singleChoice" />
 
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
+
