--- a/app/src/main/res/layout/home_screen_animeflv.xml
+++ b/app/src/main/res/layout/home_screen_animeflv.xml
@@ -1,51 +1,60 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_centerVertical="true"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:clickable="true"
-    android:background="?android:attr/selectableItemBackground"
-    android:focusable="true"
+    android:elevation="10dp"
+    android:layout_marginBottom="10dp"
+    card_view:cardCornerRadius="4dp"
     tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.HomeScreen">
-
-    <ImageView
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
-        android:layout_width="128dp"
-        android:layout_height="77dp"
-        android:id="@+id/preview_flv"
-        android:background="@drawable/untitled" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="6dp"
-        android:layout_toRightOf="@+id/preview_flv"
-        android:layout_toEndOf="@+id/preview_flv">
+        android:layout_height="match_parent"
+        android:background="?android:attr/selectableItemBackground"
+        android:focusable="true">
 
 
-        <TextView
+        <ImageView
+            android:id="@+id/preview_flv"
+            android:layout_width="128dp"
+            android:layout_height="77dp"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:layout_marginTop="6dp"
+            android:background="@drawable/untitled" />
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/nombre_flv"
-            android:gravity="center"
-            android:textSize="18dp" />
+            android:layout_centerVertical="true"
+            android:layout_marginRight="6dp"
+            android:layout_toEndOf="@+id/preview_flv"
+            android:layout_toRightOf="@+id/preview_flv">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="New Text"
-            android:layout_below="@id/nombre_flv"
-            android:id="@+id/informacion_flv"
-            android:gravity="center"
-            android:textSize="13dp" />
 
+            <TextView
+                android:id="@+id/nombre_flv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="New Text"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/informacion_flv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/nombre_flv"
+                android:gravity="center"
+                android:text="New Text"
+                android:textSize="13dp" />
+
+        </RelativeLayout>
     </RelativeLayout>
+</android.support.v7.widget.CardView>
 
-
-
-</RelativeLayout>
