--- a/app/src/main/res/layout/fragment_episodios.xml
+++ b/app/src/main/res/layout/fragment_episodios.xml
@@ -8,7 +8,8 @@
     <ExpandableListView
         android:id="@+id/info_expandible"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"/>
 
 
     <android.support.v7.widget.RecyclerView
