--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -1,10 +1,11 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
+    android:fitsSystemWindows="true"
+    tools:context=".Central">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -32,28 +33,15 @@
         </RelativeLayout>
     </RelativeLayout>
 
-
-    <LinearLayout
-        android:id="@+id/left_drawer"
-        android:layout_width="280dp"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#669900"
         android:fitsSystemWindows="true"
-        android:orientation="vertical">
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/nav_menu">
 
-        <ExpandableListView
-            android:id="@+id/drawer_expandable_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    </android.support.design.widget.NavigationView>
 
-        <ListView
-            android:id="@+id/drawer_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:choiceMode="singleChoice"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp" />
-
-    </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
