--- a/app/src/main/res/layout/home_screen_animeflv.xml
+++ b/app/src/main/res/layout/home_screen_animeflv.xml
@@ -8,8 +8,7 @@
     android:clickable="true"
     android:elevation="5dp"
     android:layout_marginBottom="6dp"
-    card_view:cardCornerRadius="4dp"
-    tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.HomeScreen">
+    card_view:cardCornerRadius="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
