Implementado el fragment favoritos (en progreso)
Falta el listener y entregar el url del anime

--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -1,7 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/coord_layout"
     tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.HomeScreen">
 
     <android.support.v7.widget.RecyclerView
@@ -10,4 +12,4 @@
         android:layout_height="match_parent"
         android:choiceMode="singleChoice" />
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
