--- a/app/src/main/res/layout/context_menu.xml
+++ b/app/src/main/res/layout/context_menu.xml
@@ -1,28 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="wrap_content"    >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/imagen"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="28dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginBottom="9dp"
+            android:layout_marginEnd="9dp"
+            android:layout_marginLeft="9dp"
+            android:layout_marginRight="9dp"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="9dp"
             android:src="@null" />
 
         <TextView
             android:id="@+id/nombre"
-            android:layout_marginRight="28dp"
-            android:layout_marginEnd="28dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/imagen"
@@ -31,5 +27,4 @@
             android:textSize="13sp" />
 
 
-    </RelativeLayout>
 </RelativeLayout>
