--- a/app/src/main/res/layout/episodios_animeflv.xml
+++ b/app/src/main/res/layout/episodios_animeflv.xml
@@ -1,29 +1,35 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:layout_marginBottom="6dp"
+    android:background="?android:selectableItemBackground"
     android:clickable="true"
     android:elevation="5dp"
-    android:layout_marginBottom="6dp"
-    card_view:cardCornerRadius="4dp"
-    tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.HomeScreen">
+    card_view:cardCornerRadius="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?android:attr/selectableItemBackground"
-        android:focusable="true">
+        android:focusable="true"
+        android:background="?android:selectableItemBackground">
 
         <TextView
             android:id="@+id/espisodios_flv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:layout_gravity="center"
-            android:gravity="center" />
+            android:layout_gravity="start"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingBottom="9dp"
+            android:paddingEnd="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingStart="16dp"
+            android:paddingTop="9dp"
+            android:textSize="16sp" />
 
     </RelativeLayout>
+
 </android.support.v7.widget.CardView>
