Realiza la descarga de episodios desde home y episodios+info

--- a/app/src/main/res/layout/fragment_descargadas.xml
+++ b/app/src/main/res/layout/fragment_descargadas.xml
@@ -1,10 +1,25 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/coord_layout"
     tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.Descargadas">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/descargados_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:choiceMode="singleChoice" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/noDescargados"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="@string/noExisten.Descargados"
+        android:textSize="20sp"
+        android:visibility="invisible" />
+
+</android.support.design.widget.CoordinatorLayout>
