--- a/app/src/main/res/layout/episodios_animeflv.xml
+++ b/app/src/main/res/layout/episodios_animeflv.xml
@@ -16,7 +16,7 @@
         android:background="?android:selectableItemBackground">
 
         <TextView
-            android:id="@+id/espisodios_flv"
+            android:id="@+id/episodios_flv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
