--- a/app/src/main/res/layout/fragment_generos_cont.xml
+++ b/app/src/main/res/layout/fragment_generos_cont.xml
@@ -1,17 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.Generos">
+    tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.GenerosContenido">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/generos"
-        android:paddingTop="9dp"
-        android:paddingEnd="9dp"
-        android:paddingRight="9dp"
-        android:paddingLeft="9dp"
+        android:id="@+id/anime_genero"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="singleChoice" />
