--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -1,6 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="#000000"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="horizontal"
     tools:context="com.demo.demo.VideoPlayer">
 
@@ -8,65 +10,72 @@
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
     <VideoView
+        android:id="@+id/videoView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/videoView"
         android:layout_gravity="center" />
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
 
-    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
         <ProgressBar
+            android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/progressBar"
-            android:visibility="gone"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="gone" />
 
-        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
+        <LinearLayout
+            android:id="@+id/fullscreen_content_controls"
+            style="?metaButtonBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/black_overlay" android:orientation="horizontal"
-            tools:ignore="UselessParent"
-            android:weightSum="1">
+            android:background="@color/black_overlay"
+            android:orientation="horizontal"
+            android:weightSum="1"
+            tools:ignore="UselessParent">
 
             <TextView
+                android:id="@+id/tiempoActual"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="start|center"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:id="@+id/tiempoActual"
-                android:layout_gravity="start|center" />
+                android:layout_marginRight="10dp" />
 
             <SeekBar
+                android:id="@+id/seekBar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/seekBar"
                 android:layout_gravity="center"
                 android:layout_weight="1.00" />
 
             <TextView
+                android:id="@+id/tiempoTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:id="@+id/tiempoTotal"
-                android:layout_gravity="center" />
+                android:layout_marginRight="10dp" />
 
             <ToggleButton
                 android:id="@+id/playPauseButton"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:layout_gravity="end|center"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/play_pause"
                 android:textOff=" "
-                android:textOn=" "
-                android:layout_gravity="end|center" />
+                android:textOn=" " />
 
         </LinearLayout>
 
