--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/ColorPrimaryDark</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+        <item name="android:navigationBarColor">?android:attr/colorPrimaryDark</item>
     </style>
 
 </resources>
