--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,12 +10,15 @@
     <color name="primary_text_material_dark">#212121</color>
     <color name="background_material_light">#c8e6c9</color>
     <color name="secondary_text_material_dark">#727272</color>
+    <color name="accent_light">#8BC34A</color>
     <color name="cafe">#795548</color>
     <color name="indigo">#3f51b5</color>
     <color name="rojo">#f44336</color>
     <color name="azulclaro">#03a9f4</color>
     <color name="naranjo">#ff9800</color>
     <color name="purpura">#673ab7</color>
+    <color name="black">#388e3c</color>
+    <color name="primary_material_light_1">#4caf50</color>
 
 
 </resources>
