--- a/app/src/main/res/layout/fragment_descargadas.xml
+++ b/app/src/main/res/layout/fragment_descargadas.xml
@@ -1,9 +1,8 @@
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coord_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/coord_layout"
     tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.Descargadas">
 
     <android.support.v7.widget.RecyclerView
