--- a/app/src/main/res/layout/fragment_reporte_de_errores.xml
+++ b/app/src/main/res/layout/fragment_reporte_de_errores.xml
@@ -1,15 +1,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.Generos">
+    tools:context=".fragmentsFLV.ReporteDeErrores">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/generos"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:choiceMode="singleChoice" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
