--- a/app/src/main/res/layout/generos_elements.xml
+++ b/app/src/main/res/layout/generos_elements.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="6dp"
     android:background="?android:selectableItemBackground"
-    android:clickable="true"
-    android:elevation="6dp">
+    android:clickable="true">
 
     <TextView
         android:id="@+id/generos_data"
