--- a/app/src/main/res/layout/home_screen_animeflv.xml
+++ b/app/src/main/res/layout/home_screen_animeflv.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:clickable="true"
-    android:elevation="5dp"
     android:layout_marginBottom="6dp"
     card_view:cardCornerRadius="4dp">
 
@@ -42,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="New Text"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/informacion_flv"
@@ -51,7 +50,7 @@
                 android:layout_below="@id/nombre_flv"
                 android:gravity="center"
                 android:text="New Text"
-                android:textSize="12dp" />
+                android:textSize="12sp" />
 
         </RelativeLayout>
     </RelativeLayout>
